--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,30 @@ Medium green: #55c57a
 Dark green: #28b485
 
 */
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-size: 16px;
+    color: #777;
+    line-height: 1.7;
+    font-weight: 400;
+    font-family: "Lato", sans-serif;
+    padding: 30px;
+}
+
+.header {
+    background-image: linear-gradient(
+         to right,
+         rgb(126,213,111, 0.8),
+         rgb(40,180,133)), 
+         url(../img/hero.jpg);
+    background-size: cover;
+    height: 95vh;
+    background-position:top;
+    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+}
