--- a/css/style.css
+++ b/css/style.css
@@ -24,12 +24,44 @@ body {
 
 .header {
     background-image: linear-gradient(
-         to right,
-         rgb(126,213,111, 0.8),
-         rgb(40,180,133)), 
-         url(../img/hero.jpg);
+        to right,
+        rgb(126,213,111, 0.8),
+        rgb(40,180,133)), 
+        url(../img/hero.jpg);
     background-size: cover;
     height: 95vh;
     background-position:top;
     clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+    position: relative;
+}
+
+.logo-box {
+    position: absolute;
+    top:40px;
+    left: 40px;
+}
+.logo{
+    height: 35px;
+}
+.heading-primary{
+    color: #fff;
+    text-transform: uppercase;
+}
+.heading-primary-main {
+  font-size: 60px;
+  font-weight: 400;
+  letter-spacing: 35px;
+  display: block;
+}
+.heading-primary-sub {
+    font-size: 20px;
+    font-weight: 700;
+    letter-spacing: 17.4px;
+    display: block;
+}
+.text-box{
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
