--- a/css/style.css
+++ b/css/style.css
@@ -46,22 +46,67 @@ body {
 .heading-primary{
     color: #fff;
     text-transform: uppercase;
+    /* backfaace visibility is used to remove the shaky animation */
+    backface-visibility: hidden;
+
 }
 .heading-primary-main {
   font-size: 60px;
   font-weight: 400;
   letter-spacing: 35px;
   display: block;
+  animation-name: moveInLeft;
+  animation-duration: 1s;
+  animation-timing-function: ease-in;
+  
+  /* animation-delay: 2s;
+    animation-iteration-count: 3;
+  */
 }
 .heading-primary-sub {
     font-size: 20px;
     font-weight: 700;
     letter-spacing: 17.4px;
     display: block;
+    animation-name: moveInRight;
+    animation-duration: 1s;
+    animation-timing-function: ease-in;
 }
 .text-box{
     position: absolute;
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+/* defining keyframes (animation) */
+
+@keyframes moveInLeft {
+    0% {
+        opacity: 0;
+        transform: translateX(-100px);
+    }
+    80% {
+        transform: translateX(10px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate(0);
+    }
+}
+
+@keyframes moveInRight {
+    0% {
+        opacity: 0;
+        transform: translateX(100px);
+    }
+    80% {
+        transform: translateX(-10px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate(0);
+    }
 }
