--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ body {
     text-transform: uppercase;
     /* backfaace visibility is used to remove the shaky animation */
     backface-visibility: hidden;
+    margin-bottom: 60px;
 
 }
 .heading-primary-main {
@@ -77,6 +78,7 @@ body {
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
+    text-align: center;
 }
 
 /* defining keyframes (animation) */
@@ -110,3 +112,66 @@ body {
         transform: translate(0);
     }
 }
+
+.btn:link,
+.btn:visited {
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 15px 40px;
+    display: inline-block;
+    color: #777;
+    border-radius: 100px;
+    transition: all .2s;
+    backface-visibility: hidden;
+    position: relative;
+    animation-name: moveInButton;
+    animation-timing-function: ease;
+    animation-duration: 0.4s;  
+}
+.btn-white {
+    background-color: #fff;
+}
+.btn:hover{
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0,0,0,.2);
+}
+.btn:active{
+    transform: translateY(-1px);
+    box-shadow: 0 5px 10px rgba(0,0,0,.2);
+}
+.btn:after {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 100px;
+    position:absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: all .4s;
+}
+.btn-white::after{
+    background-color: #fff;
+}
+.btn:hover::after{
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0;
+}
+
+.btn-animated{
+    animation: moveInButton 0.2s ease-out .7s;
+    animation-fill-mode: backwards;
+}
+
+@keyframes moveInButton {
+    0% {
+        opacity: 0;
+        transform:translateY(100px);
+    }
+    100% {
+        opacity: 1;
+        transform:translateY(0px);
+    }
+}
+
