Use of Node-sass to get sass compiling

--- a/css/style.css
+++ b/css/style.css
@@ -1,177 +1,148 @@
-/*
-COLORS:
+html {
+  font-size: 62.5%;
+  /* percentage font size will calculate the percentage of browser default font-size */ }
 
-Light green: #7ed56f
-Medium green: #55c57a
-Dark green: #28b485
-
-*/
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+*,
+a::after,
+a::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit; }
 
 body {
-    font-size: 16px;
-    color: #777;
-    line-height: 1.7;
-    font-weight: 400;
-    font-family: "Lato", sans-serif;
-    padding: 30px;
-}
+  color: #777;
+  box-sizing: border-box;
+  line-height: 1.7;
+  font-weight: 400;
+  font-family: "Lato", sans-serif;
+  padding: 3rem; }
 
 .header {
-    background-image: linear-gradient(
-        to right,
-        rgb(126,213,111, 0.8),
-        rgb(40,180,133)), 
-        url(../img/hero.jpg);
-    background-size: cover;
-    height: 95vh;
-    background-position:top;
-    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-    position: relative;
-}
+  background-image: linear-gradient(to right, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
+  background-size: cover;
+  height: 95vh;
+  background-position: top;
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+  position: relative; }
 
-.logo-box {
-    position: absolute;
-    top:40px;
-    left: 40px;
-}
-.logo{
-    height: 35px;
-}
-.heading-primary{
-    color: #fff;
-    text-transform: uppercase;
-    /* backfaace visibility is used to remove the shaky animation */
-    backface-visibility: hidden;
-    margin-bottom: 60px;
+.header__logo-box {
+  position: absolute;
+  top: 4rem;
+  left: 4rem; }
 
-}
-.heading-primary-main {
-  font-size: 60px;
+.header__logo {
+  height: 4rem; }
+
+.heading-primary {
+  color: #fff;
+  text-transform: uppercase;
+  /* backfaace visibility is used to remove the shaky animation */
+  backface-visibility: hidden;
+  margin-bottom: 60px; }
+
+.heading-primary--main {
+  font-size: 6rem;
   font-weight: 400;
-  letter-spacing: 35px;
+  letter-spacing: 3.5rem;
   display: block;
   animation-name: moveInLeft;
   animation-duration: 1s;
   animation-timing-function: ease-in;
-  
   /* animation-delay: 2s;
     animation-iteration-count: 3;
-  */
-}
-.heading-primary-sub {
-    font-size: 20px;
-    font-weight: 700;
-    letter-spacing: 17.4px;
-    display: block;
-    animation-name: moveInRight;
-    animation-duration: 1s;
-    animation-timing-function: ease-in;
-}
-.text-box{
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-}
+  */ }
+
+.heading-primary--sub {
+  font-size: 2rem;
+  font-weight: 700;
+  letter-spacing: 1.75rem;
+  display: block;
+  animation-name: moveInRight;
+  animation-duration: 1s;
+  animation-timing-function: ease-in; }
+
+.header__text-box {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center; }
 
 /* defining keyframes (animation) */
-
 @keyframes moveInLeft {
-    0% {
-        opacity: 0;
-        transform: translateX(-100px);
-    }
-    80% {
-        transform: translateX(10px);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translate(0);
-    }
-}
+  0% {
+    opacity: 0;
+    transform: translateX(-10rem); }
+  80% {
+    transform: translateX(1rem); }
+  100% {
+    opacity: 1;
+    transform: translate(0); } }
 
 @keyframes moveInRight {
-    0% {
-        opacity: 0;
-        transform: translateX(100px);
-    }
-    80% {
-        transform: translateX(-10px);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translate(0);
-    }
-}
+  0% {
+    opacity: 0;
+    transform: translateX(10rem); }
+  80% {
+    transform: translateX(-1rem); }
+  100% {
+    opacity: 1;
+    transform: translate(0); } }
 
 .btn:link,
 .btn:visited {
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 15px 40px;
-    display: inline-block;
-    color: #777;
-    border-radius: 100px;
-    transition: all .2s;
-    backface-visibility: hidden;
-    position: relative;
-    animation-name: moveInButton;
-    animation-timing-function: ease;
-    animation-duration: 0.4s;  
-}
-.btn-white {
-    background-color: #fff;
-}
-.btn:hover{
-    transform: translateY(-3px);
-    box-shadow: 0 10px 20px rgba(0,0,0,.2);
-}
-.btn:active{
-    transform: translateY(-1px);
-    box-shadow: 0 5px 10px rgba(0,0,0,.2);
-}
-.btn:after {
-    content: '';
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-    border-radius: 100px;
-    position:absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    transition: all .4s;
-}
-.btn-white::after{
-    background-color: #fff;
-}
-.btn:hover::after{
-    transform: scaleX(1.4) scaleY(1.6);
-    opacity: 0;
-}
+  font-size: 1.6rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 1.5rem 4rem;
+  display: inline-block;
+  color: #777;
+  border-radius: 10rem;
+  transition: all .2s;
+  backface-visibility: hidden;
+  position: relative;
+  animation-name: moveInButton;
+  animation-timing-function: ease;
+  animation-duration: 0.4s; }
 
-.btn-animated{
-    animation: moveInButton 0.2s ease-out .7s;
-    animation-fill-mode: backwards;
-}
+.btn--white {
+  background-color: #fff; }
+
+.btn:hover {
+  transform: translateY(-0.3rem);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
+
+.btn:active {
+  transform: translateY(-1px);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
+
+.btn:after {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all .4s; }
+
+.btn--white::after {
+  background-color: #fff; }
+
+.btn:hover::after {
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0; }
+
+.btn--animated {
+  animation: moveInButton 0.2s ease-out .7s;
+  animation-fill-mode: backwards; }
 
 @keyframes moveInButton {
-    0% {
-        opacity: 0;
-        transform:translateY(100px);
-    }
-    100% {
-        opacity: 1;
-        transform:translateY(0px);
-    }
-}
-
+  0% {
+    opacity: 0;
+    transform: translateY(10rem); }
+  100% {
+    opacity: 1;
+    transform: translateY(0px); } }
