--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,10 +12,11 @@ a::before{
     box-sizing: inherit;
 }
 
-$color-primary: #55c57a;
+$color-primary: #000;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
 $color-dark-grey: #777;
+$color-white: #fff;
 
 body {
     color: $color-dark-grey;
@@ -39,6 +40,11 @@ body {
     position: relative;
 }
 
+
+
+
+
+
 .header__logo-box {
     position: absolute;
     top:4rem;
@@ -48,7 +54,7 @@ body {
     height: 4rem;
 }
 .heading-primary{
-    color: #fff;
+    color: $color-white;
     text-transform: uppercase;
     /* backfaace visibility is used to remove the shaky animation */
     backface-visibility: hidden;
@@ -133,7 +139,7 @@ body {
     animation-duration: 0.4s;  
 }
 .btn--white {
-    background-color: #fff;
+    background-color:  $color-white;
 }
 .btn:hover{
     transform: translateY(-.3rem);
@@ -156,7 +162,7 @@ body {
     transition: all .4s;
 }
 .btn--white::after{
-    background-color: #fff;
+    background-color: $color-white;
 }
 .btn:hover::after{
     transform: scaleX(1.4) scaleY(1.6);
