--- a/css/style.css
+++ b/css/style.css
@@ -9,66 +9,6 @@ a::before {
   padding: 0;
   box-sizing: inherit; }
 
-body {
-  color: #777;
-  box-sizing: border-box;
-  line-height: 1.7;
-  font-weight: 400;
-  font-family: "Lato", sans-serif;
-  padding: 3rem; }
-
-.header {
-  background-image: linear-gradient(to right, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
-  background-size: cover;
-  height: 95vh;
-  background-position: top;
-  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-  position: relative; }
-
-.header__logo-box {
-  position: absolute;
-  top: 4rem;
-  left: 4rem; }
-
-.header__logo {
-  height: 4rem; }
-
-.heading-primary {
-  color: #fff;
-  text-transform: uppercase;
-  /* backfaace visibility is used to remove the shaky animation */
-  backface-visibility: hidden;
-  margin-bottom: 60px; }
-
-.heading-primary--main {
-  font-size: 6rem;
-  font-weight: 400;
-  letter-spacing: 3.5rem;
-  display: block;
-  animation-name: moveInLeft;
-  animation-duration: 1s;
-  animation-timing-function: ease-in;
-  /* animation-delay: 2s;
-    animation-iteration-count: 3;
-  */ }
-
-.heading-primary--sub {
-  font-size: 2rem;
-  font-weight: 700;
-  letter-spacing: 1.75rem;
-  display: block;
-  animation-name: moveInRight;
-  animation-duration: 1s;
-  animation-timing-function: ease-in; }
-
-.header__text-box {
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center; }
-
-/* defining keyframes (animation) */
 @keyframes moveInLeft {
   0% {
     opacity: 0;
@@ -89,8 +29,49 @@ body {
     opacity: 1;
     transform: translate(0); } }
 
-.btn:link,
-.btn:visited {
+@keyframes moveInButton {
+  0% {
+    opacity: 0;
+    transform: translateY(10rem); }
+  100% {
+    opacity: 1;
+    transform: translateY(0px); } }
+
+body {
+  color: #777;
+  box-sizing: border-box;
+  line-height: 1.7;
+  font-weight: 400;
+  font-family: "Lato", sans-serif;
+  padding: 3rem; }
+
+.heading-primary {
+  color: #fff;
+  text-transform: uppercase;
+  /* backfaace visibility is used to remove the shaky animation */
+  backface-visibility: hidden;
+  margin-bottom: 60px; }
+  .heading-primary--main {
+    font-size: 6rem;
+    font-weight: 400;
+    letter-spacing: 3.5rem;
+    display: block;
+    animation-name: moveInLeft;
+    animation-duration: 1s;
+    animation-timing-function: ease-in;
+    /* animation-delay: 2s;
+          animation-iteration-count: 3;
+        */ }
+  .heading-primary--sub {
+    font-size: 2rem;
+    font-weight: 700;
+    letter-spacing: 1.75rem;
+    display: block;
+    animation-name: moveInRight;
+    animation-duration: 1s;
+    animation-timing-function: ease-in; }
+
+.btn:link, .btn:visited {
   font-size: 1.6rem;
   text-transform: uppercase;
   text-decoration: none;
@@ -139,10 +120,22 @@ body {
   animation: moveInButton 0.2s ease-out .7s;
   animation-fill-mode: backwards; }
 
-@keyframes moveInButton {
-  0% {
-    opacity: 0;
-    transform: translateY(10rem); }
-  100% {
-    opacity: 1;
-    transform: translateY(0px); } }
+.header {
+  background-image: linear-gradient(to right, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
+  background-size: cover;
+  height: 95vh;
+  background-position: top;
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+  position: relative; }
+  .header__logo-box {
+    position: absolute;
+    top: 4rem;
+    left: 4rem; }
+  .header__logo {
+    height: 4rem; }
+  .header__text-box {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center; }
