Implementing the grid system

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -11,5 +11,11 @@ a::before{
     padding: 0;
     box-sizing: inherit;
 }
+html {
+    font-size: 62.5%;
+}
+body {
+    box-sizing: border-box;
+}
 
 
