--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,11 +1,15 @@
 
 @import "abstract/mixines";
 @import "abstract/functions";
-@import "abstract/variables";
 
+@import "abstract/variables";
 @import "base/base";
+
 @import "base/animations";
 @import "base/typography";
+
 @import "base/utilities";
 @import "components/button";
+
 @import "layout/header";
+@import "layout/grid";
