--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -39,3 +39,35 @@ body {
         animation-timing-function: ease-in;
     }
 }
+
+.heading-secondary {
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  display: inline-block;
+  background-image: linear-gradient(to right,
+    rgba($color-primary-light, 0.8),
+    rgba($color-primary-dark, 0.8));
+    -webkit-background-clip: text;
+    color: transparent;
+    letter-spacing: .2rem;
+    transition: all .2s;
+    
+    &:hover {
+      transform: skewY(2deg) skewX(15deg) scale(1.1);
+      scale: .5rem 1rem 2rem rgba($color-black, .2);
+    }
+}
+
+.heading-tertiary {
+  font-size: $default-font-size;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.paragraph {
+  font-size: $default-font-size;
+  &:not(:last-child){
+    margin-bottom: 3rem ;
+  }
+}
