--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -2,7 +2,7 @@
 .btn {
     &:link,
   &:visited {
-      font-size: 1.6rem;
+      font-size: $default-font-size;
       text-transform: uppercase;
       text-decoration: none;
       padding: 1.5rem 4rem;
@@ -51,5 +51,27 @@
       animation: moveInButton 0.2s ease-out .7s;
       animation-fill-mode: backwards;
   }
+  }
+
+  .btn-text{
+      &:link,
+      &:visited{
+        color:$color-primary;
+        display: inline-block;
+        text-decoration: none;
+        font-size: $default-font-size;
+        border-bottom: 1px solid $color-primary;
+        padding: 3px;
+      }
+      &:hover {
+            background-color: $color-primary;
+            color:$color-white;
+            box-shadow: 0 1rem 2rem rgba($color-black, 0.15);
+            transform:translateY(-2px);
+      }
+      &:active{
+        box-shadow: 0 .5rem 1rem rgba($color-black, 0.15);
+        transform:translateY(-2px);
+      }
   }
   
